ndd-426: fix spacing for hero buttons, stack on mobile, margin right 20px on tablet and up, min width 200px for button.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_hero.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_hero.scss
@@ -146,11 +146,12 @@ $hero-keyword-text-color: $white !default;
 
 //used only on inner pages currently
   .hero-keywords > div > div{
-    display: inline-block;
+    //display: inline-block;
   }
 //used on landing pages
 .hero-keywords div {
-  display:inline-block
+  //display:inline-block;
+  margin: 17px 0;
 }
 
 
@@ -166,7 +167,7 @@ $hero-keyword-text-color: $white !default;
    padding: 0 20px;
    letter-spacing: 2px;
    text-transform: uppercase;
-  // min-width: 200px;
+   min-width: 200px;
     &:hover {
      border: 1px solid #fff;
      background-color: rgba(0,0,0,0.8)
@@ -216,6 +217,16 @@ $hero-keyword-text-color: $white !default;
 @media (min-width: 48em) {
 
 .hero-layout {
+
+  //used only on inner pages currently
+    .hero-keywords > div > div{
+      display: inline-block;
+    }
+  //used on landing pages
+  .hero-keywords div {
+    display:inline-block;
+    margin: 0 20px 0 0;
+  }
 
   .hero-ipage,    
   .hero-landing {
